// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RawSelect snapshot size lg 1`] = `
<select
  class="component text-dark-aaaa text-md max-w-full placeholder-dark-a p-3 h-12 bg-white rounded focus:border-2 border-slate-500 border disabled:text-dark-a disabled:bg-slate-200 disabled:border-light-aa w-auto"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
</select>
`;

exports[`RawSelect snapshot size md 1`] = `
<select
  class="component text-dark-aaaa text-md max-w-full placeholder-dark-a px-3 py-2 h-10 bg-white rounded focus:border-2 border-slate-500 border disabled:text-dark-a disabled:bg-slate-200 disabled:border-light-aa w-auto"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
</select>
`;

exports[`RawSelect snapshot size sm 1`] = `
<select
  class="component text-dark-aaaa text-md max-w-full placeholder-dark-a px-3 py-1 h-8 bg-white rounded focus:border-2 border-slate-500 border disabled:text-dark-a disabled:bg-slate-200 disabled:border-light-aa w-auto"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
</select>
`;
